# Ecommerce-Backend-Rust-Actix

./: .gitignore  .sample.env  Cargo.toml  Dockerfile  Dockerfile.yml  README.md  doc.md  docker-compose.yml  hoppscotch-collection.js
migrations/: 20250612194646_create_all_tables.sql
sql/: create_user.sql
src/: config.rs  main.rs
src/db/: mod.rs
src/email/: mod.rs
src/errors/: mod.rs
src/handlers/: address.rs  auth.rs  cart.rs  mod.rs  order.rs  product.rs  user.rs
src/middleware/: is_admin.rs  jwt_auth.rs  mod.rs
src/models/: address.rs  auth.rs  cart.rs  mod.rs  order.rs  product.rs  user.rs
src/nats/: mod.rs
src/reports/: mod.rs
src/responses/: mod.rs
src/routes/: address.rs  auth.rs  cart.rs  mod.rs  order.rs  product.rs  user.rs
src/temp/: mod.rs
src/utils/: jwt.rs  password.rs
tempserver/: .gitignore  .sample.env  Cargo.toml  Dockerfile
tempserver/src/: config.rs  main.rs
tempserver/src/payload/: mod.rs
