[package]
name = "task-web-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.17.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11.8"
futures = "0.3.31"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
actix-cors = "0.7.1"
jsonwebtoken = "9.3.1"
tokio = { version = "1.45.1", features = ["full"] }
cdrs-tokio = "8.1.7"
bcrypt = "0.17.0"
chrono = { version = "0.4.26", features = ["serde"] }
futures-util = "0.3.31"
actix-web-httpauth = "0.8.2"
thiserror = "2.0.12"
validator = { version = "0.20", features = ["derive"] }
anyhow = "1.0.98"
derive_more = "2.0.1"
lettre = { version = "0.11.17", features = [ "smtp-transport", "builder"] }
bigdecimal = "0.4.8"
tokio-cron-scheduler = "0.14.0"
async-nats = "0.42.0"
regex = "1.11.1"
lazy_static = "1.5.0"
